fixed layout issue on mobile

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 }
 
 .notHeader{
-	margin-top: 10%; 
+	margin-top: 90px;
 	overflow: auto;
 }
 
